--- a/config.env.example
+++ b/config.env.example
@@ -1,4 +1,4 @@
-APP_NAME=GARAGE48 Open Banking
+APP_NAME=AngryBills
 FLASK_CONFIG=development
 SECRET_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 DATABASE=postgresql
